Fix center aligned items

--- a/packages/react/src/PricingOptions/PricingOptions.module.css
+++ b/packages/react/src/PricingOptions/PricingOptions.module.css
@@ -20,8 +20,7 @@
   /* prettier-ignore */
   --brand-pricing-options-template-areas-single-item: 
     'leadingComponent actions'
-      'label actions'
-      'heading actions'
+      'header actions'
       'description actions'
       'price actions'
       'feature-list actions';
@@ -248,6 +247,52 @@
 /* Content                                                 */
 /* ---------------------------------------------------------- */
 
+.PricingOptions__header {
+  display: flex;
+  grid-area: header;
+}
+
+/* When item is left-aligned, place the label next to the heading if it fits, and stack it if it doesn't */
+.PricingOptions__item:not(.PricingOptions__item--align-center) .PricingOptions__header {
+  flex-wrap: wrap-reverse;
+  align-items: center;
+  column-gap: var(--base-size-16);
+}
+
+.PricingOptions__item:not(.PricingOptions__item--align-center) .PricingOptions__label {
+  --brand-Label-color: var(--brand-color-accent-primary);
+  --brand-Label-color-start: var(--brand-color-accent-primary-start);
+  --brand-Label-color-end: var(--brand-color-accent-primary-end);
+  flex: 0 0 auto;
+  order: 2;
+}
+
+.PricingOptions__item:not(.PricingOptions__item--align-center) .PricingOptions__heading {
+  margin-block: var(--base-size-16);
+  flex: 0 1 auto;
+  order: 1;
+  align-self: flex-start;
+}
+
+/* When item is centered, stack the label on top the heading */
+.PricingOptions__item--align-center .PricingOptions__header {
+  flex-direction: column;
+  align-items: center;
+}
+
+.PricingOptions__item--align-center .PricingOptions__label {
+  --brand-Label-color: var(--brand-color-accent-primary);
+  --brand-Label-color-start: var(--brand-color-accent-primary-start);
+  --brand-Label-color-end: var(--brand-color-accent-primary-end);
+  order: 1;
+  margin: 0 auto;
+}
+
+.PricingOptions__item--align-center .PricingOptions__heading {
+  margin-block: var(--base-size-16);
+  order: 2;
+}
+
 .PricingOptions__leading-component {
   grid-row: leadingComponent;
 }
@@ -278,13 +323,6 @@
   flex: 0 1 auto; /* Minimum width before wrapping */
   order: 1;
   align-self: flex-start;
-}
-
-/* When not enough space, let label drop to next row and span both columns */
-.PricingOptions__label:only-child,
-.PricingOptions__label:has(+ .PricingOptions__heading[style*='display: block']) {
-  grid-column: 1 / -1;
-  grid-row: 1;
 }
 
 .PricingOptions__description {
